[package]
name = "actix-handler-args-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
jsonwebtoken = "8.1.1"
serde = { version="1.0.137", features=["derive"] }
chrono = "0.4.19"